--- a/cardStyle.css
+++ b/cardStyle.css
@@ -47,14 +47,14 @@ nav ul a {
 	cursor: pointer;
 }
 
-/* .fa-plus-circle {
+ .fa-plus-circle {
 	margin-right: 0.8em;
-} */
+} 
 
-/* .body-div1, .body-div2 {
+ .body-div1, .body-div2 {
 	margin-left: 150px;
 	margin-right: 150px;
-} */
+} 
 
 .body-div1 {
 	margin-top: 25px;
